--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,1 +1,191 @@
 @import "reset";
+@import 'mixins';
+
+.container{
+    @include container();
+}
+
+.background-img__wrapper{
+    background-image: url(/src/assets/bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.header{
+    padding: 38px 0 35px;
+}
+
+
+.header__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.header__container::after{
+    content: "";
+    width: 134px;
+    height: 4px;
+    display: block;
+    background-color: #BABBC5;
+    position: absolute;
+    left: 50%;
+    top:100%;
+    transform: translate(-50%, 32px);
+    @media only screen and (max-width: 767px){
+        display: none;
+    }
+}
+
+.header__logo-wrapper{
+    display: flex;
+    @media only screen and (max-width: 767px){
+        width: 103px;
+        height: 15px;
+    }
+}
+
+
+.header__logo{
+    width: 100%;
+    height: 100%;
+}
+
+
+.header__list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style-type: none;
+    column-gap: 60px; 
+    @media only screen and (max-width: 1024px){
+        column-gap: 50px;
+    }
+    @media only screen and (max-width: 767px){
+        display: none;
+    }
+}
+
+.header__link{
+    color: #FFF;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 15px;
+    text-transform: uppercase;
+    text-decoration: none;
+    @media only screen and (max-width:1024px){
+        font-size: 12px;
+    }
+}
+
+.header__link:hover{
+    color: #6aa1c3;
+}
+
+
+.header__link:active{
+    color: #2d5282;
+}
+
+.header__hamburger-wrapper{
+    display: flex;
+    margin-right: 15px;
+    @media only screen and (min-width: 768px){
+        display: none;
+    }
+}
+
+.hamburger{
+    width: 100%;
+    height: 100%;
+}
+
+.banner{
+    padding: 130px 0 120px;
+    margin-bottom: 116px;
+    @media only screen and (max-width: 1024px){
+        padding: 157px 0 126px;
+    }
+    @media only screen and (max-width: 767px){
+        padding: 50px 0 52px;
+    }
+}
+
+
+.banner__container::before{
+    content: "";
+    width: 1170px;
+    height: 1px;
+    background-color: #BABBC5;
+    position: absolute;
+    transform: translateY(-130px);
+    @media only screen and (max-width: 1024px){
+        transform: translateY(-157px);
+    }
+    @media only screen and (max-width: 767px){
+        display: none;
+    }
+}
+
+.banner__template{
+    margin: 0 auto;
+    max-width: 999px;
+    @media only screen and (max-width: 1024px){
+    max-width: 749px;
+    }
+    @media only screen and (max-width: 767px){
+        max-width: 280px;
+        }
+}
+
+.banner__title{
+    max-width: 1170px;
+    color: #FFF;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 75px;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+    @media only screen and (max-width: 1024px){
+        font-size: 48px;
+        margin-bottom: 62px;
+        line-height: 56px;
+    }
+    @media only screen and (max-width: 767px){
+        font-size: 36px;
+        margin-bottom: 32px;
+        line-height: 42px;
+    }
+}
+
+.banner__text{
+    max-width: 1170px;
+    color: #FFF;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom: 82px;
+    @media only screen and (max-width: 1024px){
+        font-size: 18px;
+        margin-bottom: 89px;
+        line-height: 21px;
+    }
+    @media only screen and (max-width: 767px){
+        font-size: 14px;
+        margin-bottom: 49px;
+        line-height: 16px;
+    }
+}
+
+.btn{
+    @include btn();
+}
+
