--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -4,9 +4,16 @@
     margin: 0 auto;
 }
 
-@mixin btn(){
+@mixin button(){
     border: 2px solid #FF4343;
     background: #FF4343;
+        &:active{
+            background: #FF4343;
+            box-shadow: 4px 4px 30px 0px #FF4343;
+                }
+        &:hover{
+            background: #E71414;
+                }
     color: #FFF;
     text-align: center;
     font-family: 'Raleway', sans-serif;
@@ -27,3 +34,5 @@
         padding: 15px;
     }
 }
+
+
