--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -26,11 +26,12 @@
     width: 100%;
     display: block;
     margin: 0 auto;
+    cursor: pointer;
     @media only screen and (max-width: 1024px){
         max-width: 314px;
     }
     @media only screen and (max-width: 768px){
-        max-width: 280px;
+        max-width: 87vw;
         padding: 15px;
     }
 }
