--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -5,16 +5,16 @@
 }
 
 @mixin button(){
-    border: 2px solid #FF4343;
-    background: #FF4343;
+    border: 2px solid $buttonColorMain;
+    background: $buttonColorMain;
         &:active{
-            background: #FF4343;
-            box-shadow: 4px 4px 30px 0px #FF4343;
+            background: $buttonActive;
+            box-shadow: 4px 4px 30px 0px $buttonActive;
                 }
         &:hover{
-            background: #E71414;
+            background: $buttonHover;
                 }
-    color: #FFF;
+    color: $mainText;
     text-align: center;
     font-family: 'Raleway', sans-serif;
     font-size: 24px;
@@ -31,7 +31,7 @@
         max-width: 314px;
     }
     @media only screen and (max-width: 768px){
-        max-width: 87vw;
+        max-width: 100%;
         padding: 15px;
     }
 }
