--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -165,3 +165,79 @@
         @include button;
     }
 }
+
+
+.visual{
+    margin-bottom: 114px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2px;
+    @media only screen and (max-width: 767px){
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__image-wrapper{
+        position: relative;
+        padding-top: 100%;
+    }
+    &__image{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    &__content{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        // background: rgba(255, 67, 67, 0.80);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        opacity: 0;
+        &:hover{
+            opacity: 1;
+            background: rgba(255, 67, 67, 0.80);
+        }
+        &:active{
+            opacity: 1;
+            background: rgba(185, 12, 12, 0.80);
+        }
+    }
+
+    &__title{
+        @include font($mainText, center, 24px, 900, 28px);
+        @include font-main;
+        text-transform: uppercase;
+        margin-bottom: 37px;
+        @media only screen and (max-width: 1024px){
+            font-size: 18px;
+            line-height: 21px;
+            margin-bottom: 22px;
+        }
+        @media only screen and (max-width: 767px){
+            margin-bottom: 5px;
+        }
+
+    }
+
+    &__text{
+        @include font($mainText, center, 18px, 400, 21px);
+        @include font-main;
+        @media only screen and (max-width: 1024px){
+            font-size: 14px;
+            line-height: 16px;
+        }
+    }
+}
+
+
+
+    
