--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -228,6 +228,7 @@
 
     &__text{
         @include font($textColorBlackGrey, center, 18px, 400, 21px);
+        @include font-main;
         @media only screen and (max-width: 1024px){
             @include font($titleColorBlackGrey, center, 14px, 400, 16px);
         }
