--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -45,7 +45,7 @@
         width: 100%;
         height: 100%;
     }
-
+ 
     &__list{
         display: flex;
         flex-wrap: wrap;
@@ -54,6 +54,28 @@
         column-gap: 5px; 
         @media only screen and (max-width: 767px){
             display: none;
+        }  
+
+        &.open{
+            display: block;
+            position: fixed;
+            left: 0;
+            top: 108px;
+            width: 100%;
+            height: 100vh;
+
+            .header__list{
+                display: block;
+            }
+
+            .header__link{
+                text-align: left;
+                padding: 24px 0 24px 20px;
+            }
+
+        //     .hamburger path{
+        //         fill: #464a9b;
+        //     }
         }
     }
 
@@ -70,26 +92,35 @@
         display: block;
         min-width: 129px;
         padding: 36px 0;
+        transition: all .1s ease;
         @media only screen and (max-width:1024px){
             font-size: 12px;
             min-width: 103px;
         }
-        &:hover{
-            color: $linkHoverBlue;
-            &::after{
-                content: "";
-                width: 100%;
-                height: 4px;
-                display: block;
-                background-color: $lineColor;
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                @media only screen and (max-width: 767px){
-                    display: none;
-                }
+      
+        &::after{
+            content: "";
+            width: 0%;
+            height: 4px;
+            display: block;
+            background-color: $lineColor;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            transition: all .1s linear;
+            @media only screen and (max-width: 767px){
+                display: none;
             }
         }
+        
+        &:hover::after{
+            width: 100%;
+        }
+
+        &:hover{
+            color: $linkHoverBlue;
+        }
+
         &:active{
             color: $linkActiveBlue;
         }
@@ -98,6 +129,8 @@
     &__hamburger-wrapper{
         display: flex;
         margin-right: 15px;
+        position: relative;
+        z-index: 1;
         @media only screen and (min-width: 768px){
             display: none;
         }
@@ -105,7 +138,16 @@
         .hamburger{
             width: 100%;
             height: 100%;
+
+            &.color path{
+                fill:#2fcece;
+            }
         }
+    }
+
+    &.scrolled {
+        background: #2c2d44;
+        z-index: 1;
     }
 }
 
@@ -125,6 +167,10 @@
 
     &__container{
         @include container();
+
+        &.hide{
+            opacity: 0;
+        }
     }
 
     &__title{
@@ -196,12 +242,12 @@
         left: 0;
         width: 100%;
         height: 100%;
-        // background: rgba(255, 67, 67, 0.80);
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         opacity: 0;
+        transition: all .4s linear;
         &:hover{
             opacity: 1;
             background: rgba(255, 67, 67, 0.80);
