--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -7,3 +7,4 @@ $linkHoverBlue: #6aa1c3;
 $linkActiveBlue: #2d5282;
 $titleColorBlackGrey: #2D3033;
 $textColorBlackGrey: #6C7279;
+$linkActiveRed: #E71414;
