--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -248,6 +248,7 @@
         flex-direction: column;
         opacity: 0;
         transition: all .4s linear;
+        cursor: pointer;
         &:hover{
             opacity: 1;
             background: rgba(255, 67, 67, 0.80);
