--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -8,3 +8,7 @@ $linkActiveBlue: #2d5282;
 $titleColorBlackGrey: #2D3033;
 $textColorBlackGrey: #6C7279;
 $linkActiveRed: #E71414;
+$blackText: #000;
+$backgroundColor: #353C65;
+$footerBgColor: #2C3154;
+$footerText: #808080;
