--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -65,6 +65,10 @@
             z-index: 0;
             width: 100%;
             height: 100vh;
+            background-image: url(/src/assets/bg.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
 
             .header__list{
                 display: block;
@@ -181,14 +185,17 @@
         padding: 106px 0 52px;
         margin-bottom: 40px;
     }
+    &.hide{
+        display: none;
+    }
 
     &__container{
         @include container();
 
-        &.hide{
-            opacity: 0;
-        }
-    }
+    //     &.hide{
+    //         opacity: 0;
+    // }
+}
 
     &__title{
         @include font($mainText, center, 64px, 900, 75px);
