--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -38,6 +38,8 @@
         @media only screen and (max-width: 767px){
             width: 103px;
             height: 15px;
+            position: relative;
+            z-index: 1;
         }
     }
 
@@ -52,8 +54,11 @@
         justify-content: space-around;
         list-style-type: none;
         column-gap: 5px; 
+        transition: 0.6s ease-in-out;
         @media only screen and (max-width: 767px){
             display: none;
+            // opacity: 0;
+            // transition: opacity 0.6s linear;
         }  
 
         &.open{
@@ -69,6 +74,7 @@
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
+            transition: 0.6s ease-in-out;
 
             .header__list{
                 display: block;
@@ -134,6 +140,9 @@
         margin-right: 15px;
         position: relative;
         z-index: 1;
+        background-color: transparent;
+        cursor: pointer;
+        transition: all .2s linear;
         @media only screen and (min-width: 768px){
             display: none;
         }
@@ -403,6 +412,8 @@
     }
 
     &__image-wrapper{
+        position: relative;
+        padding-top: 100%;
         margin-bottom: 30px;
         @media only screen and (max-width: 1024px){
             margin-bottom: 25px;
@@ -412,17 +423,25 @@
     &__image-mobile{
         object-fit: cover;
         display: none;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        object-position: center;
         @media only screen and (max-width: 767px){
             display: block;
-            width: 100%;
-            height: auto;
         }
     }
 
     &__image{
         object-fit: cover;
         width: 100%;
-        height: auto;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        object-position: center;
         @media only screen and (max-width: 767px){
             display: none;
         }
@@ -488,14 +507,21 @@
             width: 40px;
             height: 40px;
         }
+
+        & path{
+            transition: all .3s linear;
+        }
+
+        & rect{
+            transition: all .3s linear;
+        }
+
         &:hover path{
             fill: $linkActiveRed;
-            transition: all .3s linear;
         }
 
         &:hover rect{
             stroke: $linkActiveRed;
-            transition: all .3s linear;
         }
         
     }
@@ -503,6 +529,7 @@
     &__icon{
         width: 100%;
         height: 100%;
+        transition: all .3s linear;
     }
 }
 
@@ -549,6 +576,11 @@
         @media only screen and (max-width: 1024px){
             padding: 47px 104px 130px 88px;
         }
+
+        @media only screen and (max-width: 870px){
+            padding: 41px 41px 80px;
+        }
+
         @media only screen and (max-width: 767px){
             padding: 23px 25px 95px 20px;
         }
@@ -559,7 +591,7 @@
         @include font-secondary;
         text-transform: capitalize;
         font-style: italic;
-        padding-bottom: 24px;
+        margin-bottom: 24px;
         @media only screen and (max-width: 1024px){
             font-size: 24px;
             line-height: 32px;
@@ -593,6 +625,14 @@
     @media only screen and (max-width: 1024px){
         width: 9.5px;
         height: 9.5px;
+    }
+
+    &:hover{
+        border: 1px solid $linkActiveRed;
+    }
+
+    &:active{
+        background-color: $linkActiveRed;
     }
 }
 
@@ -673,14 +713,14 @@
     }
 }
 
-.info{
+.footer{
     background-color: $backgroundColor;
-    padding: 71px 0;
+    padding: 71px 0 0;
     @media only screen and (max-width: 1024px){
-        padding: 46px 0 43px;
+        padding: 46px 0 0;
     }
     @media only screen and (max-width: 767px){
-        padding: 34px 0;
+        padding: 34px 0 0;
     }
 
     &__container{
@@ -688,13 +728,16 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 30px;
+        margin-bottom: 71px;
         @media only screen and (max-width: 1024px){
             column-gap: 20px;
+            margin-bottom: 41px;
         }
 
         @media only screen and (max-width: 767px){
-        grid-template-columns: 1fr;
-        row-gap: 59px;
+            grid-template-columns: 1fr;
+            row-gap: 59px;
+            margin-bottom: 33px;
         }
     }
 
@@ -758,14 +801,21 @@
             max-width: 33px;
             max-height: 33px;
         }
+
+        & path{
+            transition: all .3s linear;
+        }
+
+        & rect{
+            transition: all .3s linear;
+        }
+
         &:hover path{
             fill: $linkActiveRed;
-            transition: all .3s linear;
         }
 
         &:hover rect{
             stroke: $linkActiveRed;
-            transition: all .3s linear;
         }
     }
 
@@ -798,23 +848,19 @@
             line-height: 16px;
         }
     }
-}
 
-.footer{
-    background-color: #2C3154;
-    padding: 24px 0;
-    @media only screen and (max-width: 1024px){
-        padding: 14px 0;
+    &__copyright{
+        background-color: #2C3154;
+        padding: 24px 0;
+        @media only screen and (max-width: 1024px){
+            padding: 14px 0;
+        }
+        @media only screen and (max-width: 767px){
+            padding: 29px 0;
+        }
     }
-    @media only screen and (max-width: 767px){
-        padding: 29px 0;
-    }
-
-    &__container{
-        @include container;
-    }
-
-    &__text{
+    
+    &__copyright-text{
         @include font($footerText, center, 18px, 400, 21px);
         @include font-main;
         text-transform: capitalize;
@@ -827,8 +873,11 @@
         }
     }
 
-    &__author{
+    &__copyright-author{
         color: $mainText;
     }
 }
+
+
+
 
