--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -141,6 +141,7 @@
         position: relative;
         z-index: 1;
         background-color: transparent;
+        border: none;
         cursor: pointer;
         transition: all .2s linear;
         @media only screen and (min-width: 768px){
